<resources>
    <string name="app_name">MaterialesUABC</string>
    <string-array name="menu_list">
        <item>Inicio</item>
        <item>Presentaciones</item>
        <item>Tareas</item>
        <item>Libros</item>
        <item>Informacion</item>
    </string-array>
    <string-array name="unidades_list">
        <item>Unidad 1</item>
        <item>Unidad 2</item>
        <item>Unidad 3</item>
    </string-array>
    <string-array name="libros_list">
        <item>Advances in Sintering Science and Technology</item>
        <item>Introduction to Materials Engineering</item>
        <item>Callister Fundamentas of Materials Science</item>
        <item>Ceramic Materiacs Science and Engineering</item>
        <item>Ciencia e Ingenieria de los Materiales</item>
        <item>Classic and Advanced Ceramics</item>
        <item>Libro Materiales</item>
    </string-array>
    <string-array name="presentaciones_list">
        <item>Introduccion a Materiales 1</item>
        <item>Introduccion a Materiales 2</item>
        <item>Introduccion a Materiales 3</item>
        <item>Presentacion 4</item>
    </string-array>
    <string-array name="materias_list">
        <item>Desarrollo de Materiales </item>
        
        
    </string-array>
    <string name="texto_bienvenida1">En primer lugar, se les da
        la más cordial bienvenida al curso de Desarrollo de Materiales [Taller - Laboratorio]
        para el período de 2016-2 del cual se tiene la confianza de que será de gran aceptación
        por su parte dada mi intención de llevar a cabo un curso ágil, dinámico y de mucha comunicación.</string>
    <string name="texto_bienvenida2">
        En curso con Laboratorio y Taller, cada uno elegirá un sistema de material para
    desarrollarlo en laboratorio por diferentes procesos, así que nos veremos tiempo parcial
    en salón de clase, todo se enviará con apoyo de Blackboard; Carta Descriptiva de cada
    curso, Plan de trabajo, recepción de tareas [Norma Editorial se enviara y el archivo
    enviado favor de etiquetarlo de la siguiente manera: Apellido Paterno y Materno –
    Tarea 1 DM o. Ejemplo: Díaz Trujillo-Tarea 1- DM] e información que se considere
    pertinente. Se da correo electrónico alterno para dudas; diazg@uabc.edu.mx. Esta
    semana se suben archivos a Blackboard. Se agradece el que se utilice la plataforma de
    Blackboard.
    </string>
    <string name="texto_bienvenida3">
        Asesoría en cubículo 10 de Ed. 6D, de manera permanente, mi horario es de las 8:00 a
    22:00 Hs.
    </string>
    <string name="texto_bienvenida4">
        Por lo antes mencionado, me dirijo a Uds. con el fin de que se me tenga la confianza
    para poder llevar a cabo en todo momento comentarios positivos que permitan obtener
    el mejor rendimiento por ambos lados; por su parte, el adquirir el conocimiento que
    permitan llevar a cabo un buen desarrollo profesional y de mi parte, el que sea un
    estimulo el poder contribuir a su formación para un buen desempeño de sus
    actividades.
    </string>
    <string name="texto_bienvenida5">
        De aquí que, para lograrlo debamos de estar siempre en comunicación y el que me
    tengan la suficiente confianza para acudir en todo momento de duda.
    </string>
    <string name="texto_bienvenida6">
        Gracias por su atención y apoyo y sobre todo inquietud de fortalecer su formación
    académica
    </string>
    <string name="texto_bienvenida7">
        Gerardo C Díaz Trujillo
    </string>
    <string name="texto_informacion1">PROPÓSITO GENERAL DEL CURSO</string>
    <string name="texto_informacion2">
        Los contenidos teóricos y prácticos que se manejan en este curso darán al participante las habilidades de
formular y elaborar un nuevo producto, en base a una hipótesis elaborada por el mismo en un proyecto de
investigación y desarrollo, tomando como criterio de calidad la normatividad y estándares establecidos y los
conocimientos teóricos y prácticos de materias previas que fortalecen la toma de decisiones, con espíritu de
iniciativa responsable y creativa fomentando el compromiso con la comunidad.
    </string>
    <string name="texto_informacion3">COMPETENCIA DEL CURSO</string>
    <string name="texto_informacion4">
        Formular un nuevo material o modificar uno ya existente, utilizando materias primas de la región, que cumpla
con las características deseadas de calidad y normatividad vigente, siguiendo el método científico y
seleccionando las técnicas analíticas adecuadas, así como las estrategias de prevención y control de la
contaminación, con espíritu de iniciativa responsable y creativa ante la problemática social.
    </string>
    <string name="texto_informacion5">Contenido</string>
    <string name="texto_informacion6">Capítulo I: Elaboración del anteproyecto</string>
    <string name="texto_informacion7">
        Definición del problema, Revisión bibliográfica, Justificación, Objetivos (generales y específicos), Metas,
Hipótesis, Fundamentos, Metodología, Cronograma de actividades y Bitácora de laboratorio</string>
    <string name="texto_informacion8">
        Capítulo II: Caracterización de materias primas
    </string>
    <string name="texto_informacion9">
        Determinar; composición química, propiedades fisicoquímicas de la materia prima y análisis
Espectroscópico, mineralógico y microestructural
    </string>
    <string name="texto_informacion10">Capítulo III: Diseño de experimentos</string>
    <string name="texto_informacion11">
        Definiciones básicas en el diseño de experimentos; Etapas, Consideraciones prácticas sobre el uso de
métodos estadísticos, Elementos de inferencia estadística, Experimentos con un solo factor (análisis de
varianza), Diseño completamente al azar y ANOVA, Comparaciones o pruebas de rango múltiples,
Verificación de los supuestos del modelo, Elección del tamaño de la muestra, Diseño factoriales.
    </string>
    <string name="texto_informacion12">Capítulo IV: Caracterización de producto terminal</string>
    <string name="texto_informacion13">
        Determinar; composición química, propiedades fisicoquímicas de producto obtenido y análisis
Espectroscópico, mineralógico y microestructural
    </string>
    <string name="texto_informacion14">Capítulo V: Elaboración de la tesina</string>
    <string name="texto_informacion15">Contenido de un trabajo terminal como Tesis</string>
    <string name="texto_informacion16">Capítulo VI: Patentes</string>
    <string name="texto_informacion17">Redacción, Conservación de derechos de patente y su uso como fuente de información</string>
    <string-array name="slide_1_texto">
        <item>Ceramicas Covalente</item>
        <item>Formadas basicamente por silicion y oxigeno</item>
        <item>A partir de combinaciones.....</item>
    </string-array>
    <string-array name="slide_2_texto">
        <item>Ceramicas Covalente</item>
        <item>Si dos Tetraedros SiO4 ^4- se unen compartiendo un oxigeno tendremos una estructura en forma
        de cadena(asbestos)</item>
    </string-array>
    <string-array name="slide_3_texto">
        <item>Ceramicas Covalente</item>
        <item>Si dos  tetraedros SiO4 ^4- comparten tres oxigenos se forman estructuras laminares (arcillas y micas)</item>
    </string-array>
    <string-array name="slide_4_texto">
        <item>Ceramicas Covalente</item>
        <item>Si los 4 oxigenos del tetraedro
            SiO4^4- son compartidos, se
            forma una red tridimensional de silice (SiO2), que puede
            ser cristalina o amorfa</item>
        <item>Cristobalita (polimorfo cristalino del SiO2</item>
    </string-array>
    <string-array name="slide_5_texto">
        <item>Ceramicas Amorfas</item>
        <item>La silice puede existir como solido amorfo o vidrio</item>
        <item>Los Vidrios inorganicos mas comunes (recipientes,ventanas) llevan oxidos
        (B203, CaO, Na20</item>
    </string-array>
    <string-array name="slide_6_texto">
        <item>Defectos Estructurales</item>
        <item> Defectos atomicos puntuales</item>
        <item>Vacantes anionicas iones (cationes) intersticiales</item>
        <item>Estructura de defectos → Electroneutralidad →
            en los ceramicos los defectos no ocurren de forma aislada
        </item>
        <item>Defecto Frenkel: vacante cationica + cation intersticial</item>
        <item>Defecto Schottky: Solo en ceramicos AX.
            Consiste en una vacante aniomica + vacante cationica
        </item>
        <item>Iones con 2 estados de oxidacion (Fe^2+, Fe ^3+)→
            se conserva la electoneutralidad pero no la estequiometria
        </item>
    </string-array>
    <string-array name="slide_7_texto">
        <item>Defectos Estructurales</item>
        <item> Impurezas</item>
        <item>Intersticiales: sus radios ionicos debe ser pequeños
            en relacion con los del anion.
        </item>
        <item>Sustitucionales: sus tamaños ionicos y su carga deben
            ser casi iguales que los iones disolventes
        </item>

        <item>Para compensar las diferencias de carga que puedan aparecer
            y mantener la electroneutralidad se forman defectos atomicos puntuales en la red.
        </item>
    </string-array>
    <string-array name="slide_8_texto">
        <item>
            Aleaciones Ceramicas
        </item>
        <item>
            Mejorar la tenacidad a la fractura
        </item>
        <item>
            Conseguir una densificacion total
        </item>
        <item>
            Los oxidos fundidos tienen gran solubilidad entre si y
            solidifican en una o mas fases (diagramas de equilibrio)
        </item>
    </string-array>
    <string-array name="slide2_1_texto">
        <item>
            Conservacion de Derechos

        </item>
        <item>
            Que es una Invecion?

        </item>
        <item>
            Toda creacion humana que permite transformar los
            maeteriales o la energia que existe en la naturaleza
            para:
        </item>
        <item>
            Aprovechamiento por el hombre
        </item>
        <item>
            Dar solucion a un problema concreto
        </item>
    </string-array>
    <string-array name="slide2_2_texto">
        <item>
        Figuras Juridicas protegidas por la
            Ley de la Propiedad Industrial
        </item>
    </string-array>
    <string-array name="slide2_3_texto">
        <item>
            Patente

        </item><item>
            Es un derecho o privilegio legal que concede el estado a una persona,
        fisica o moral, para producir o utilizar en forma exclusiva, o a traves de
        un tercero bajo licencia, un producto o proceso desarrollado por dicha
        persona.

        </item>
    </string-array>
    <string-array name="slide2_4_texto">
        <item>
         Modelo de Utilidad
        </item><item>
            Son objetos, utensilios, aparatos o herramientas que,
            como resultado de una modificacion presente una funcion
            diferente.
        </item>
    </string-array>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="label_nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="vacio">vacio</string>
    <string name="fa_save">&#xf0c7;</string>
    <string name="fa_remove">&#xf00d;</string>
    <string name="nombre">Nombre:</string>
    <string name="materia">Materia:</string>
    <string name="pregunta">Pregunta Aqui</string>
    <string name="escoje_una_opcion">Escoje Una Opcion:</string>
    <string name="ver_respuesta">Ver Respuesta</string>
    <string name="numero_pregunta">Numero Pregunta</string>
    <string name="errores">Errores</string>
    <string name="aciertos">Aciertos</string>
    <string name="tiempo">Tiempo</string>
</resources>