<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.materialesuabc.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/materia"
        />
    <Spinner
        android:id="@+id/spinner_materias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        android:clickable="false"
        android:focusable="true" />
    <ScrollView
        android:id="@+id/scrollViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtBienvenida1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida1"
                android:padding="7dp"
                android:textSize="@dimen/tv_size_home"

                />
            <TextView
                android:id="@+id/txtBienvenida2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida2"
                android:padding="7dp"
                android:textSize="@dimen/tv_size_home"
                />
            <TextView
                android:id="@+id/txtBienvenida3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida3"
                android:textSize="@dimen/tv_size_home"
                android:padding="7dp"

                />
            <TextView
                android:id="@+id/txtBienvenida4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida4"
                android:padding="7dp"
                android:textSize="@dimen/tv_size_home"
                />
            <TextView
                android:id="@+id/txtBienvenida5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida5"
                android:padding="7dp"
                android:textSize="@dimen/tv_size_home"
                />
            <TextView
                android:id="@+id/txtBienvenida6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida6"
                android:padding="7dp"
                android:textSize="@dimen/tv_size_home"
                />
            <TextView
                android:id="@+id/txtBienvenida7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida7"
                android:padding="7dp"
                android:textSize="@dimen/tv_size_home"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
