<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.materialesuabc.PerfilFragment">
            <ImageView
                android:id="@+id/imagen_perfil"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/imagen_de_perfil"
                android:src="@mipmap/ic_launcher"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:columnCount="2"
                >
                <TextView
                    android:id="@+id/label_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/nombre" />
                <TextView
                    android:id="@+id/user_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:padding="15dp" />
                <TextView
                    android:id="@+id/label_apellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/apellido" />
                <TextView
                    android:id="@+id/user_apellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="15dp"
                    android:layout_row="1" />
            </GridLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_errores"
                    android:text="@string/errores"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tv_aciertos"
                    android:text="@string/aciertos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tv_tiempo"
                    android:text="@string/tiempo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                >
                <ListView
                    android:id="@+id/listview_historial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

            </LinearLayout>
</LinearLayout>
