<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.example.android.materialesuabc.TriviaFragment">

    <TextView
        android:id="@+id/tvNumeroPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_pregunta"
        android:layout_gravity="end"
        />
    <TextView
        android:id="@+id/trivia_pregunta_text"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escoje_una_opcion"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/opcion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/custom_button_background"
                    android:button="@android:color/transparent"
                    android:paddingTop="20dp"
                    android:textColor="@color/White"
                    android:text="@string/vacio"
                    />
                <RadioButton
                    android:id="@+id/opcion2"
                    android:padding="10dp"
                    android:background="@drawable/custom_button_background"
                    android:button="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="@string/vacio"
                    />
                <RadioButton
                    android:id="@+id/opcion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_background"
                    android:button="@android:color/transparent"
                    android:padding="10dp"
                    android:textColor="@color/White"
                    android:text="@string/vacio"
                    />
                <RadioButton
                    android:id="@+id/opcion4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_background"
                    android:button="@android:color/transparent"
                    android:padding="10dp"
                    android:textColor="@color/White"
                    android:text="@string/vacio"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/checkAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnClickTrivia"
                android:layout_gravity="end"
                android:text="@string/ver_respuesta"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
