<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.materialesuabc.PerfilEditarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imagen_perfil"
                android:layout_width = "100dp"
                android:layout_height= "100dp"
                android:scaleType="center"
                android:contentDescription="@string/imagen_de_perfil"
                android:src="@mipmap/ic_launcher"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"

                >
                <TextView
                    android:id="@+id/label_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/label_nombre"
                    />
                <EditText
                    android:id="@+id/user_editar_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:padding="15dp"


                    />
                <TextView
                    android:id="@+id/label_apellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/apellido"
                    />
                <EditText
                    android:id="@+id/user_editar_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="15dp"
                    android:layout_row="1"
                    />
            </GridLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                >

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/save_btn"
                    android:onClick="botonEditarPerfilClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/fa_save" />

                <Button
                    android:id="@+id/cancel_btn"
                    android:onClick="botonEditarPerfilClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/fa_remove" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

